# MysticScribe

./: .gitignore  README.md  example.py  generate_chapter.py  mysticscribe.py  possible_dev.txt  pyproject.toml  pytest.ini  run_tests.py
art/: synopsis.md
chapters/: chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md
knowledge/: chapters.txt  core_story_elements.txt  cultivation_system.txt  economic.txt  government.txt  knowledge_system_overview.txt  military.txt  plot.txt  regions.txt  society.txt
outlines/: chapter_1.txt  chapter_2.txt  chapter_3.txt  chapter_4.txt
src/mysticscribe/: __init__.py  __main__.py  crew.py  main.py  main_refactored.py
src/mysticscribe/config/: agents.yaml  tasks.yaml
src/mysticscribe/core/: __init__.py  chapter_manager.py  knowledge_manager.py  validation.py
src/mysticscribe/tools/: __init__.py  custom_tool.py  previous_chapter_reader.py  style_analysis.py  style_guide.py
src/mysticscribe/utils/: __init__.py  file_utils.py  logging_config.py  text_utils.py
src/mysticscribe/workflows/: __init__.py  architect_workflow.py  base_workflow.py  complete_workflow.py  legacy_workflow.py
styles/: casual.txt  formal.txt  traditional.txt
tests/: README.md  conftest.py  setup_check.py  test_architect_workflow.py  test_chapter_manager.py  test_chapter_manager_clean.py  test_continuity_tools.py  test_crew.py  test_knowledge_manager.py  test_main.py  test_mysticscribe.py  test_polisher_style.py  test_refactoring.py  test_style_guide.py  test_validation.py  test_workflows.py
